# TicTacToe

./: .gitignore  CMakeLists.txt  CMakeListsNotUsing.txt  MainWindow.cpp  MainWindow.ui  README.md  _computer_player_8cpp.html  _computer_player_8h.html  _computer_player_8h_source.html  _computer_player_tests_8cpp.html  _computer_player_tests_8cpp.js  _human_player_8cpp.html  _human_player_8h.html  _human_player_8h_source.html  _human_player_tests_8cpp.html  _human_player_tests_8cpp.js  _i_board_game_8h.html  _i_board_game_8h_source.html  _i_player_8h.html  _i_player_8h_source.html  _i_player_factory_8h.html  _i_player_factory_8h_source.html  _main_window_8cpp.html  _main_window_8h.html  _main_window_8h_source.html  _mock_computer_player_8h.html  _mock_computer_player_8h_source.html  _mock_human_player_8h.html  _mock_human_player_8h_source.html  _mock_tic_tac_toe_game_8h.html  _mock_tic_tac_toe_game_8h_source.html  _player_factory_8cpp.html  _player_factory_8cpp.js  _player_factory_8h.html  _player_factory_8h_source.html  _r_e_a_d_m_e_8md.html  _tic_tac_toe_game_8cpp.html  _tic_tac_toe_game_8h.html  _tic_tac_toe_game_8h_source.html  _tic_tac_toe_game_tests_8cpp.html  (+72 more)
.github/workflows/: main.yml
docs/code/: doxyfile
example/exampleWidgetQt/: .gitignore  CMakeLists.txt  ComputerPlayer.cpp  ComputerPlayer.h  ComputerPlayerTests.cpp  HumanPlayer.cpp  HumanPlayer.h  IBoardGame.h  IPlayer.h  IPlayerFactory.h  MainWindow.cpp  MainWindow.h  MockComputerPlayer.h  MockTicTacToeGame.h  TicTacToeGame.cpp  TicTacToeGame.h  main.cpp
example/exampleWidgetQt/include/: IBoardGame.h  TicTacToeGame.h
example/exampleWidgetQt/src/: HumanPlayer.cpp  TicTacToeGame.cpp
search/: all_0.js  all_1.js  all_11.js  all_2.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  functions_0.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  pages_0.js  searchdata.js  variables_0.js  (+6 more)
src/qtGUI/: CMakeLists.txt  ComputerPlayer.cpp  ComputerPlayer.h  HumanPlayer.cpp  HumanPlayer.h  IBoardGame.h  IPlayer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  PlayerFactory.cpp  PlayerFactory.h  TicTacToeGame.cpp  TicTacToeGame.h  conanfile.txt  main.cpp
test/: CMakeLists.txt  ComputerPlayerTests.cpp  HumanPlayerTests.cpp  MockHumanPlayer.h  MockTicTacToeGame.h  TicTacToeGameTests.cpp
